test/test_examples/semantic_examples/semantic_error/error_6_return_exp_04.zig
// Semantic error: Expression in return of void function

const ifj = @import("ifj24.zig");
pub fn main() void {
    _ = f();
}

pub fn f() void {
    return 42.428 + 5;
}